--- a/07_ExpressMVCMySQL/package.json
+++ b/07_ExpressMVCMySQL/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.4",
     "pug": "^3.0.3"
   }
 }
