--- a/08_ExpressMVCMySQLAuth/package.json
+++ b/08_ExpressMVCMySQLAuth/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.4",
